<resources>

    <string name="app_name">Fuel Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_activity">Preferences</string>
    
   
    <string name="vehicle_text">Vehicle Type</string>    
    <string name="model_text">Model</string>
    <string name="fuel_type_text">Fuel Type</string>
    <string name="make_text">Make</string>
    <string name="fuel_rate_text">Rs./leter</string>
    <string name="save_btn_text">Save</string>
    <string name="cancel_btn_text">Cancel</string>
    
    <string name="m_reading_reading_text">Odometer Reading</string>
    <string name="fuel_amount_text">Today\'s Filling</string>
    
    

</resources>