<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/odometer_linear_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/m_reading_label_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/m_reading_reading_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="120dp" />

        <EditText
            android:id="@+id/odometer_text_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/fuel_amount_label_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/fuel_amount_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:width="120dp" />

        <EditText
            android:id="@+id/fuel_amount_text_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned" />

        <LinearLayout
            android:id="@+id/cancel_save_layout_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="fill_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_btn_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_btn_text"
                android:width="120dp" />

            <Button
                android:id="@+id/cancel_btn_id"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn_text"
                android:width="120dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>